search bar design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,50 @@
 
     <title>Document</title>
 </head>
+
 <body>
+
+    <header></header>
+
+    <!-- ============================
+        =START MAIN
+    ============================= -->
+    <main>
+        <!-- Book search section -->
+        <section class="book-search my-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-5">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Enter a book name">
+                            <button class="btn btn-lg btn-primary" type="button" id="button-addon2">Search</button>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+
+        <!-- Search result section -->
+        <section class="search-result">
+
+        </section>
+
+
+
+    </main>
+    <!-- ============================
+        =END MAIN
+    ============================= -->
+
+    <footer></footer>
 
     <!-- Bootstrap script -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- custom scripts -->
     <script src="js/custom.js"></script>
 </body>
+
 </html>
