search result design

--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
 
         <!-- Search result section -->
         <section class="search-result">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Card title</h5>
+                                <p class="lead"><strong>by </strong> Gary B. Shelly, Thomas J. Cashman, William J. Dorin, Jeffrey J. Quasney</p>
+                                <p class="mb-0"><small class="text-muted">- First published in 2000</small></p>
+                                <p><small class="text-muted">- Published by <em><strong>Computer Step</strong></em></small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
