get search text and make dynamic url

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="row justify-content-center">
                     <div class="col-md-5">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="Enter a book name">
-                            <button class="btn btn-lg btn-primary" type="button" id="button-addon2">Search</button>
+                            <input id="search-input" type="text" class="form-control" placeholder="Enter a book name">
+                            <button class="btn btn-lg btn-primary" type="button" id="search-button">Search</button>
                         </div>
                     </div>
                     <!-- /.col -->
