--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <!-- Search result section -->
         <section class="search-result">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
+                <div id="search-items" class="row g-4">
+                    <div class="col-md-3 search-item">
                         <div class="card">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
