search result count section added

--- a/index.html
+++ b/index.html
@@ -37,22 +37,32 @@
             <!-- /.container -->
         </section>
 
+        <!-- search result count section -->
+        <section class="search-result-count">
+            <div class="container result-count">
+                <!-- _____________________________
+                    # result count goes here
+                _____________________________ -->
+            </div>
+        </section>
+
         <!-- Search result section -->
         <section class="search-result">
             <div class="container">
                 <div id="search-items" class="row g-4">
-                    <div class="col-md-3 search-item">
-                        <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Card title</h5>
-                                <p class="lead"><strong>by </strong> Gary B. Shelly, Thomas J. Cashman, William J. Dorin, Jeffrey J. Quasney</p>
-                                <p class="mb-0"><small class="text-muted">- First published in 2000</small></p>
-                                <p><small class="text-muted">- Published by <em><strong>Computer Step</strong></em></small></p>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- _____________________________
+                        # search items goes here
+                    _____________________________ -->
                 </div>
+            </div>
+        </section>
+
+        <!-- search result count section -->
+        <section class="search-result-count">
+            <div class="container result-count">
+                <!-- _____________________________
+                    # result count goes here
+                _____________________________ -->
             </div>
         </section>
 
