no result found added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- ============================
         =START MAIN
     ============================= -->
-    <main>
+    <main class="my-5">
         <!-- Book search section -->
-        <section class="book-search my-5">
+        <section class="book-search mb-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-5">
@@ -39,7 +39,7 @@
 
         <!-- search result count section -->
         <section class="search-result-count">
-            <div class="container result-count">
+            <div id="result-count" class="container">
                 <!-- _____________________________
                     # result count goes here
                 _____________________________ -->
