--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap stylesheet -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Document</title>
+    <title>Book Archive</title>
 </head>
 
 <body>
